# PadalaShield

./: .env  README.md
contracts/PadalaShield/: Cargo.toml
contracts/PadalaShield/src/: lib.rs
contracts/notes/: Cargo.toml
contracts/notes/src/: test.rs
