[package]
name    = "padala_shield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level        = "z"       # optimise for binary size (Wasm deployment)
overflow-checks  = true      # keep safety checks in release
debug            = false
strip            = "symbols"
codegen-units    = 1
lto              = true
panic            = "abort"
